# PsvitaSpot

./: CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: build.yml
include/: Application.h  Constants.h  InputHandler.h  PlaybackManager.h  Renderer.h  SpotifyAPI.h  SpotifyConfig.h  SpotifyUI.h
src/: Application.cpp  InputHandler.cpp  PlaybackManager.cpp  Renderer.cpp  SpotifyAPI.cpp  SpotifyUI.cpp  main.cpp
